@@ -11,9 +11,7 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
-import { GQLTool } from './palette/Palette.types';
-
-export interface ToolProps {
-  tool: GQLTool;
-  onClick: (tool: GQLTool) => void;
+export interface NodePaletteProps {
+  diagramElementId: string;
+  labelId: string | null;
 }
